--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "app del backend del control de maquinaria para el reflujo de petroleo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   "homepage": "https://github.com/GrayJacketStudios/petroleo#readme",
   "dependencies": {
     "express": "^4.16.3",
-    "mongoose": "^5.1.4"
+    "mongoose": "^5.1.4",
+    "nodemon": "^1.17.5"
   }
 }
